trying to fix header link scrollbar

--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -1,10 +1,10 @@
 @-webkit-keyframes shake {
   0% {
-    transform: rotate(10deg);
+    transform: rotate(15deg);
   }
   25% {
     transform-origin: center center;
-    transform: rotate(-10deg);
+    transform: rotate(-15deg);
   }
   50% {
     transform: rotate(0deg);
